login: Don't discard old default user image

This adds support for syncing of image index outside current set
and updates the user image screen to support old images.

Bug: 761665
Test: old default user image is available on user image screen.
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Id3952955f6114420e122ac6171fedf5ca2dba910